--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,15 @@
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
 }
 
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 .col-xs-5ths,
 .col-sm-5ths,
 .col-md-5ths,
@@ -477,4 +486,55 @@ h1,
 
 .tourContainer {
     background-color: #ecf0f5;
+}
+
+/* Recent search */
+
+.localHeadLine {
+    margin-bottom: 0;
+    border-bottom: none;
+    color: #003c71;
+}
+
+.btn {
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: 1px solid transparent;
+}
+
+.btn-box-tool {
+    padding: 5px;
+    font-size: 12px;
+    background: transparent;
+    color: #97a0b3;
+}
+
+.removeTourRecentItem {
+    padding: 0px;
+    background: transparent;
+    margin: 0%;
+}
+
+.card-price >p {
+    font-size: 16px;
+    color: #00c1de;
+    margin-right: 1rem;
+}
+
+.card-item .card-content {
+    display: flex;
+}
+
+
+.card-removal {
+    float: right;
+}
+
+.row-top{
+    height: 70%;
+}
+.row-bottom{
+    height: 30%;
+    float: right;
 }
