remove code login form

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -547,7 +547,7 @@ img {
 
 /* Ribbon */
 
-.ribbon-wrapper-green {
+.ribbon-wrapper-red {
     width: 85px;
     height: 88px;
     overflow: hidden;
@@ -556,7 +556,7 @@ img {
     right: -3px;
 }
 
-.ribbon-green {
+.ribbon-red {
     font-size: 10px;
     color: #fff;
     text-transform: uppercase;
@@ -566,26 +566,28 @@ img {
     transform: rotate(45deg);
     width: 100px;
     display: block;
-    background: #79A70A;
-    background: linear-gradient(#9BC90D 0%, #79A70A 100%);
+    background: #F70505;
+    background: linear-gradient(#F70505 0%, #DE0707 100%);
     box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
     position: absolute;
     top: 19px;
     right: -21px;
 }
 
-.ribbon-green:before,
-.ribbon-green:after {
+.ribbon-red:before,
+.ribbon-red:after {
     content: '';
     position: absolute;
     left: 0px;
     top: 100%;
     z-index: -1;
-    border-left: 3px solid #79A70A;
+    border-left: 3px solid #DE0707;
     border-right: 3px solid transparent;
     border-bottom: 3px solid transparent;
-    border-top: 3px solid #79A70A;
+    border-top: 3px solid #DE0707;
 }
+
+
 
 /* Search box */
 
