--- a/public/css/style.css
+++ b/public/css/style.css
@@ -608,6 +608,12 @@ img {
     padding-top: 10%;
     width: 40%
 }
+
+/* Custom date time picker  */
+.dtp-style{
+    
+}
+
 /* Caption image css */
 
 figure {
