--- a/public/css/style.css
+++ b/public/css/style.css
@@ -672,7 +672,28 @@ figcaption {
     box-shadow: 0px 2px 0px #69C;
 }
 
-.nav-link.active{
-    background-color: transparent !important ;
-    color: orange !important
+.nav-link.active {
+    background-color: transparent !important;
+    color: orange !important;
+    text-decoration: none;
+}
+
+.hotline {
+    color: #f79321;
+    text-decoration: none;
+}
+
+.hotline:hover,
+.hotline:active {
+    color: orange;
+    text-decoration: none;
+}
+
+.nav-link:hover {
+    text-decoration: none !important
+}
+
+a:hover {
+    color: #0056b3;
+    text-decoration: none !important;
 }
