fix style tour detail

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,6 +114,12 @@ footer.padding-10 {
     text-align: right;
 }
 
+ul li:hover {background: #ecf0f5;}
+
+ul li a:hover{
+    text-decoration: none;
+}
+
 .vcolor-info {
     color: #00c1de;
 }
@@ -687,4 +693,8 @@ figcaption {
 
 .breadcrumb{
     list-style-type: none;
+}
+
+.icon-calendar{
+    margin-inline-end: 0%;
 }
