--- a/public/css/style.css
+++ b/public/css/style.css
@@ -603,15 +603,10 @@ img {
     position: absolute;
     font-weight: bold;
     top: 5%;
+    left: 20%;
     padding-top: 10%;
-    flex: 1;
-    width: 80%;
-    max-width: 65vw;
-    align-items: center;
-    justify-content: center;
-    padding-left: 10%;
-    margin: auto;
-    z-index: 999;
+    max-width: 600px;
+    width: 70%
 }
 
 /* Custom date time picker  */
